--- a/src/gx.vcxproj
+++ b/src/gx.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>grs</RootNamespace>
   </PropertyGroup>
-  <Import Project="..\src\cfg\vs\vs-ver.props" />
+  <Import Project="cfg\vs\vs-ver.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='D_St|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
@@ -56,7 +56,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
-  <Import Project="..\src\cfg\vs\vs-inc.props" />
+  <Import Project="cfg\vs\vs-inc.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="Shared">
@@ -93,7 +93,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.;..\include;..\FOREIGN;..\FOREIGN\secp256k1;..\FOREIGN\czmq</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;..\include;..\FOREIGN;..\FOREIGN\secp256k1;..\FOREIGN\zmq;..\FOREIGN\zmq\czmq\include;..\..\libgroestlcoin\include</AdditionalIncludeDirectories>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -117,7 +117,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.;..\include;..\FOREIGN;..\FOREIGN\secp256k1;..\FOREIGN\czmq</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;..\include;..\FOREIGN;..\FOREIGN\secp256k1;..\FOREIGN\zmq;..\FOREIGN\zmq\czmq\include;..\..\libgroestlcoin\include</AdditionalIncludeDirectories>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -142,7 +142,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.;..\include;..\FOREIGN;..\FOREIGN\secp256k1;..\FOREIGN\czmq</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;..\include;..\FOREIGN;..\FOREIGN\secp256k1;..\FOREIGN\zmq;..\FOREIGN\zmq\czmq\include;..\..\libgroestlcoin\include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>bx-config.h</ForcedIncludeFiles>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
       <BufferSecurityCheck>false</BufferSecurityCheck>
@@ -177,7 +177,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='R_St|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>.;..\include;..\FOREIGN;..\FOREIGN\secp256k1;..\FOREIGN\czmq</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;..\include;..\FOREIGN;..\FOREIGN\secp256k1;..\FOREIGN\zmq;..\FOREIGN\zmq\czmq\include;..\..\libgroestlcoin\include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>bx-config.h</ForcedIncludeFiles>
     </ClCompile>
   </ItemDefinitionGroup>
